--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
+<!-- Doctype necessary to tell the browser the HTML version we are using -->
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- The head contains the meta-data on the page -->
 <head>
     <meta charset="UTF-8" />
+    <!-- We link our CSS file -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <!-- The title is the the text that appears in the tab on our page -->
+    <title>Horiseon - SEO Optimization</title>
 </head>
-<!-- comment -->
 <body>
+    <!-- The  header contains our logo and our navigation bar -->
     <header class="header">
+        <!-- Logo -->
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Navigation bar -->
         <nav>
             <ul>
                 <li>
@@ -24,53 +30,57 @@
             </ul>
         </nav>
     </header>
+    <!-- Big image that is shown in the screen -->
     <div class="hero"></div>
+    <!-- Content starts here -->
     <section class="content">
-        <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <article id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Desk with coffee, laptop, and bullet journal showing different ways to improve search engine optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop showing a graph of reputation going up"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Group of people discussing about social media platforms and strategies"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </article>
     </section>
+    <!-- Aside section starts here, it will be located on the right side of the page -->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Icon showing an gear transforming into money"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Icon showing a lightbulb with a tie"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Icon showing a gear and different coins"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
+    <!-- Footer Section -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
